ASSERT_TOOLS_UPDATE_EXPECTED_FILE Support filtering the path when many potential files